[package]
name = "js0_auth"
version = "0.1.1"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/rs.git"
homepage = "https://github.com/js0-site/rs/tree/dev/js0_auth"
description = "js0_auth"
keywords = []

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aok = "0.1.18"

[dev-dependencies]
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.28"
static_init = "1.0.4"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
