[package]
name = "js0_captcha"
version = "0.1.1"
edition = "2024"
license = "MulanPSL-2.0"
repository = "https://github.com/js0-site/rs.git"
homepage = "https://github.com/js0-site/rs/tree/dev/js0_captcha"
description = "js0_captcha"
keywords = []

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
aok = "0.1.18"
bitcode = "0.6.7"
click_captcha = { version = "0.1.38", features = ["webp", "ico_li", "verify"] }
rs2proto = "0.1.1"
tokio = { version = "1.48.0", features = ["rt"] }
uuid = { version = "1.19.0", features = ["v4"] }
xbin = "0.1.9"
xerr = "0.1.16"
xkv = { version = "0.1.51", features = ["r"] }

[dev-dependencies]
aok = "0.1.18"
log = "0.4.29"
log_init = "0.1.28"
static_init = "1.0.4"

[dev-dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "rt-multi-thread", "time", "sync"]
