[package]
name = "js0_volo"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["grpc", "http"]
grpc = []
http = ["dep:volo-http", "dep:http_grpc"]

[dependencies]
volo-gen = { path = "./volo-gen" }
js0_srv = { path = "../srv" }

volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
xrpc = { version = "0.1.39", features = ["volo-http", "volo-grpc"] }
volo_boot = "0.1.3"
log = "0.4.28"
volo-http = { version = "0.4.3", features = ["server"], optional = true }
http_grpc = { version = "0.1.30", optional = true }
mimalloc = "0.1.48"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-grpc = "*"
pilota = "*"

anyhow = "1"
futures = "0.3"
tokio = "1"

[dev-dependencies]
log_init = "0.1.27"
static_init = "1.0.4"
